@@ -65,7 +65,8 @@ public class TestHttpClientConfig
                 .setHttp2InitialStreamReceiveWindowSize(new DataSize(16, MEGABYTE))
                 .setHttp2InputBufferSize(new DataSize(8, KILOBYTE))
                 .setSelectorCount(2)
-                .setRecordRequestComplete(true));
+                .setRecordRequestComplete(true)
+                .setConnectBlocking(false));
     }
 
     @Test
@@ -95,6 +96,7 @@ public class TestHttpClientConfig
                 .put("http-client.http2.input-buffer-size", "1MB")
                 .put("http-client.selector-count", "16")
                 .put("http-client.record-request-complete", "false")
+                .put("http-client.connect-operations-blocking", "true")
                 .build();
 
         HttpClientConfig expected = new HttpClientConfig()
@@ -120,7 +122,8 @@ public class TestHttpClientConfig
                 .setHttp2InitialStreamReceiveWindowSize(new DataSize(7, MEGABYTE))
                 .setHttp2InputBufferSize(new DataSize(1, MEGABYTE))
                 .setSelectorCount(16)
-                .setRecordRequestComplete(false);
+                .setRecordRequestComplete(false)
+                .setConnectBlocking(true);
 
         ConfigAssertions.assertFullMapping(properties, expected);
     }
